# frakt

./: Cargo.toml  LICENSE-MIT  README.md  build.rs
examples/: auth.rs  backend_test.rs  background_download.rs  cookies.rs  download.rs  file_download.rs  file_upload.rs  multipart.rs  progress.rs  proxy.rs  simple_http.rs  streaming.rs  upload_task.rs  websocket.rs  websocket_debug.rs
java/se/brendan/frakt/: BackgroundDownloader.java  DexWorkerFactory.java  DownloadProgressCallback.java  DownloadWorker.java  ProgressTrackingUploadDataProvider.java  RustUrlRequestCallback.java
java/stubs/android/: R.java
java/stubs/android/app/: NotificationChannel.java  NotificationManager.java
java/stubs/android/content/: Context.java
java/stubs/android/os/: Build.java
java/stubs/androidx/annotation/: NonNull.java
java/stubs/androidx/core/app/: NotificationCompat.java
java/stubs/androidx/work/: Configuration.java  Data.java  ForegroundInfo.java  ListenableWorker.java  WorkInfo.java  Worker.java  WorkerParameters.java
java/stubs/com/google/common/util/concurrent/: ListenableFuture.java
java/stubs/java/nio/: ByteBuffer.java
java/stubs/org/chromium/net/: CronetException.java  UploadDataProvider.java  UploadDataSink.java  UrlRequest.java  UrlResponseInfo.java
src/: auth.rs  body.rs  client.rs  cookies.rs  error.rs  lib.rs  request.rs  response.rs  session.rs  task.rs  websocket.rs
src/backend/: cookie_store.rs  cookie_store_impl.rs  mod.rs  types.rs
src/backend/android/: callback.rs  cookies.rs  cronet.rs  download.rs  jni_bindings.rs  mod.rs  request.rs  response.rs  tests.rs
src/backend/foundation/: cookies.rs  error.rs  mod.rs  websocket.rs
src/backend/foundation/delegate/: background_session.rs  data_task.rs  download_task.rs  generic_waker.rs  mod.rs  shared_context.rs  upload_task.rs  websocket.rs
src/backend/reqwest/: background.rs  cookies.rs  mod.rs  websocket.rs
src/backend/windows/: bits.rs  cookies.rs  error.rs  http_client.rs  mod.rs  websocket.rs
src/client/: background.rs  download.rs  mod.rs  upload.rs
src/delegate/: background_session.rs  data_task.rs  download_task.rs  generic_waker.rs  mod.rs  shared_context.rs  upload_task.rs
src/task/: data.rs  download.rs  upload.rs
tests/: integration_tests.rs  miri.rs
