[package]
name = "frakt"
version = "0.1.0"
edition = "2024"
description = "Ergonomic platform HTTP client bindings for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bbqsrc/frakt"
rust-version = "1.86"

[package.metadata.docs.rs]
all-features = true
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
]
rustdoc-args = ["--cfg", "docsrs"]

[features]
default = ["json"]
json = ["serde", "serde_json"]
multipart = []

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = { version = "0.6", default-features = false, features = ["alloc"] }
objc2-foundation = { version = "0.3", default-features = false, features = [
    "alloc",
    "block2",
    "NSError",
    "NSObject",
    "NSCharacterSet",
    "NSString",
    "NSData",
    "NSDate",
    "NSURL",
    "NSURLError",
    "NSURLAuthenticationChallenge",
    "NSURLCredential",
    "NSURLProtectionSpace",
    "NSDictionary",
    "NSArray",
    "NSURLRequest",
    "NSURLResponse",
    "NSURLSession",
    "NSOperation",
    "NSHTTPCookie",
    "NSHTTPCookieStorage",
] }
objc2-security = { version = "0.3", default-features = false, features = [
    "objc2",
    "SecTrust",
] }
block2 = { version = "0.6", default-features = false }

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "io-util", "macros", "time", "fs"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }
thiserror = "2.0"
bytes = "1.0"
arc-swap = "1.0"
urlencoding = "2.1"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "cookies", "rustls-tls"] }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
serde = { version = "1.0", optional = true, features = ["derive"] }
serde_json = { version = "1.0", optional = true }
tracing = "0.1.41"
url = "2.5.7"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    # HTTP Client
    "Web_Http",
    "Web_Http_Headers",
    "Web_Http_Filters",

    # WebSocket
    "Networking_Sockets",

    # BITS for background downloads
    "Win32_Networking_BackgroundIntelligentTransferService",
    "Win32_System_Com",
    "Win32_Security",

    # Core functionality
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",

    # Error handling
    "Win32_Foundation",
] }
windows-core = "0.62"
windows-sys = { version = "0.61.1", features = ["Win32_Foundation", "Win32_System_Com"] }

[[example]]
name = "multipart"
required-features = ["multipart"]

[[example]]
name = "file_upload"
required-features = ["multipart"]
