[package]
name = "frakt"
version = "0.1.0"
edition = "2024"
description = "Ergonomic platform HTTP client bindings for Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bbqsrc/frakt"
rust-version = "1.86"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[package.metadata.docs.rs]
all-features = true
targets = [
    # "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-apple-ios",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
    "aarch64-pc-windows-msvc",
    "aarch64-linux-android",
    "armv7-linux-androideabi",
]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "io-util", "macros", "time", "fs"] }
futures-util = { version = "0.3", default-features = false, features = ["std", "io"] }
thiserror = "2.0"
bytes = "1.0"
arc-swap = "1.0"
urlencoding = "2.1"
http = "1.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "stream", "cookies", "rustls-tls"], optional = true }
tokio-tungstenite = { version = "0.28", default-features = false, features = ["connect", "rustls-tls-webpki-roots"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
tracing = "0.1.41"
url = "2.5.7"
base64 = "0.22"
vampire = { git = "https://github.com/bbqsrc/vampire-rs" }
pathos = "0.3.0"
cookie_store = "0.22"
time = { version = "0.3", features = ["formatting"] }
tempfile = "3.23.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2 = { version = "0.6", default-features = false, features = ["alloc"], optional = true }
objc2-foundation = { version = "0.3", default-features = false, optional = true, features = [
    "alloc",
    "block2",
    "NSError",
    "NSObject",
    "NSCharacterSet",
    "NSString",
    "NSData",
    "NSDate",
    "NSURL",
    "NSURLError",
    "NSURLAuthenticationChallenge",
    "NSURLCredential",
    "NSURLProtectionSpace",
    "NSDictionary",
    "NSArray",
    "NSURLRequest",
    "NSURLResponse",
    "NSURLSession",
    "NSOperation",
    "NSHTTPCookie",
    "NSHTTPCookieStorage",
] }
objc2-security = { version = "0.3", default-features = false, optional = true, features = [
    "objc2",
    "SecTrust",
] }
block2 = { version = "0.6", default-features = false, optional = true }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", optional = true, features = [
    # WinHTTP Client and WebSocket
    "Win32_Networking_WinHttp",

    # BITS for background downloads
    "Win32_Networking_BackgroundIntelligentTransferService",
    "Win32_System_Com",
    "Win32_Security",

    # Core functionality
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",

    # Error handling
    "Win32_Foundation",
] }
windows-core = { version = "0.62", optional = true }
windows-sys = { version = "0.61.1", optional = true, features = ["Win32_Foundation", "Win32_System_Com"] }
cookie_store = { version = "0.22", optional = true }
rand = { version = "0.9.2", optional = true }

[target.'cfg(target_os = "android")'.dependencies]
jni = { version = "0.21", optional = true }
ndk = { version = "0.9", optional = true }
cookie_store = { version = "0.22", optional = true }
ndk-context = { version = "0.1", optional = true }
ndk-glue = { version = "0.7", optional = true }
once_cell = { version = "1.19", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }

[features]
default = ["backend-reqwest"]
backend-reqwest = ["dep:reqwest", "tokio-tungstenite"]
backend-winhttp = ["windows", "windows-core", "windows-sys", "cookie_store", "rand"]
backend-foundation = ["objc2", "objc2-foundation", "objc2-security", "block2"]
backend-android = ["jni", "ndk", "cookie_store", "ndk-context", "ndk-glue", "once_cell", "chrono"]
android-tests = []

[package.metadata.vampire]
permissions = [
    "android.permission.INTERNET",
    "android.permission.ACCESS_NETWORK_STATE",
    "android.permission.CHANGE_NETWORK_STATE",
    "android.permission.WRITE_EXTERNAL_STORAGE"
]

[package.metadata.vampire.dependencies]
"org.chromium.net:cronet-api" = "141.7340.3"
"org.chromium.net:cronet-embedded" = "141.7340.3"
"androidx.work:work-runtime" = "2.10.5"
"androidx.core:core" = "1.15.0"

[package.metadata.vampire.res.xml."values.xml"]
enable_system_job_service_default = true